--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   firebase_auth: ^4.15.3
   shared_preferences: ^2.2.2
+  cloud_firestore: ^4.13.6
+  cached_network_image: ^3.3.0
+  provider: ^6.1.1
+  carousel_slider: ^4.2.1
  
 
 dev_dependencies:
